name:                haskell-perf-crypto
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Dmitry Bushev
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010
