name:                haskell-perf-crypto
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Dmitry Bushev
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:    base >=4.10 && <4.11
  hs-source-dirs:   src
  default-language: Haskell2010

benchmark time
  main-is:          Time.hs
  build-depends:    base
                  , HsOpenSSL
                  , bytestring
                  , criterion
                  , cryptonite
                  , deepseq
                  , mtl
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -rtsopts
